--- a/css/index.css
+++ b/css/index.css
@@ -1,25 +1,107 @@
-@media screen and (min-width: 640px){
+@media screen and (min-width: 1100px){
+  body{
+    display:grid;
+    grid-template-columns: 15% 570px auto;
+    grid-template-rows: 10vh 90vh;
+  }
   .avatar{
     width:50px;
     height:50px;
     border-radius: 50%;
   }
+  .link{
+    widows: 40px;
+    height:40px;
+  }
+  .addpost_slika{
+    width:25px;
+    height:25px;
+  }
+  #dodaj_post{
+    border-radius: 50%;
+    position:absolute;
+    bottom:0;
+  }
+  .searchbardiv{
+    vertical-align: middle;
+    position:relative;
+    width: 60%;
+    height: 100%;
+    top:25%;
+  }
+  input[type=text]{
+    width:85%;
+  }
+  input[type=submit]{
+    position: absolute;
+  }
+  .randomuser_slika{
+    width:30px;
+    height: 30px;
+    border-radius: 50%;
+  }
+  .form_bottom{
+    display: inline-block;
+    margin-left: 10px;
+    margin-right: 10px;
+    align-items: center;
+  }
+  .bottom_bar{
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .post_image{
+    width:90%;
+    height:400px;
+    margin:auto;
+    object-fit: contain;
+  }
+  .post_img{
+    text-align: center;
+  }
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  .navigacija{
+    display: block;
+    border-right: 1px solid grey;
+    padding-right: 10px;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
   .loged_user{
+    padding-left:5px;
+    padding-top: 5px;
     font-size: 20px;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    border-bottom: 1px solid grey;
   }
   .all_posts{
-    overflow-y:auto;
+    overflow-y:scroll;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    width:100%;
   }
-  .loged_user{grid-area: name; }
-  .navigacija{grid-area: nav; }
-  .all_posts{grid-area: posts; }
-  .random_users_display{grid-area: random_users; }
-  body{
-    display:grid;
-    grid-template-areas:
-    'nav name name random_users'
-    'nav posts posts random_users'
-    'nav posts posts random_users'
-    'nav posts posts random_users';
+  .search{
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 3;
+    grid-column-end: 4;
+  }
+  .random_people{
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 3;
+    grid-column-end: 4;
   }
 }
